<resources>
    <string name="app_name">MobileController</string>

    <string name="clientConnectionTextView">ClientConnection: </string>
    <string name="clientConnectButton">Connect to client</string>
    <string name="clientConnectEditText">Ip</string>

    <string name="connectionTextView">Connection: </string>
    <string name="connectButton">Connect</string>
    <string name="connectEditText">Code</string>
    <string name="onBackButton">Back</string>

    <string name="upButton">Up</string>
    <string name="downButton">Down</string>
    <string name="leftButton">Left</string>
    <string name="rightButton">Right</string>
    <string name="attackButton">Attack</string>
    <string name="exitButton">Exit</string>

</resources>
