<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="suto.zoran.firsttry.MainActivity">
    <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
    <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
    <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
    <!--android:paddingTop="@dimen/activity_vertical_margin"-->


    <LinearLayout
        android:id="@+id/clientConnectionLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="59dp"
        android:orientation="vertical"
        android:visibility="visible"
        android:weightSum="1">

        <TextView
            android:id="@+id/ipTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_weight="2.50"
            android:text="@string/connectionTextView"
            android:textColor="@android:color/white"
            android:textSize="40sp" />

        <EditText
            android:id="@+id/clientIpText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/ipTextView"
            android:layout_alignStart="@+id/ipTextView"
            android:layout_below="@+id/ipTextView"
            android:layout_marginTop="19dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/clientConnectEditText"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/clientIpConnect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/clientIpText"
            android:layout_alignStart="@+id/clientIpText"
            android:layout_below="@+id/clientIpText"
            android:layout_marginTop="11dp"
            android:background="@drawable/button_bg_rounded_corners"
            android:elevation="0dp"
            android:onClick="onConnectClientButton"
            android:text="@string/clientConnectButton"
            android:textColor="@color/colorAccent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/connectionLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="59dp"
        android:orientation="vertical"
        android:visibility="invisible"
        android:weightSum="1">

        <TextView
            android:id="@+id/codeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_weight="2.50"
            android:text="@string/connectionTextView"
            android:textColor="@android:color/white"
            android:textSize="40sp" />

        <EditText
            android:id="@+id/clientCodeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/ipTextView"
            android:layout_alignStart="@+id/ipTextView"
            android:layout_below="@+id/ipTextView"
            android:layout_marginTop="19dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/connectEditText"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/connect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/clientIpText"
            android:layout_alignStart="@+id/clientIpText"
            android:layout_below="@+id/clientIpText"
            android:layout_marginTop="11dp"
            android:background="@drawable/button_bg_rounded_corners"
            android:elevation="0dp"
            android:onClick="onTapButton"
            android:text="@string/connectButton"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/backButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/clientIpText"
            android:layout_alignStart="@+id/clientIpText"
            android:layout_below="@+id/clientIpText"
            android:layout_marginTop="11dp"
            android:background="@drawable/button_bg_rounded_corners"
            android:elevation="0dp"
            android:onClick="onBackButton"
            android:text="@string/onBackButton"
            android:textColor="@color/colorAccent" />

    </LinearLayout>

    <GridLayout
        android:id="@+id/controllerLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:columnCount="4"
        android:rowCount="3"
        android:visibility="invisible">

        <Button
            android:id="@+id/rightButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="1"
            android:background="@drawable/button_bg_rounded_corners"
            android:text="@string/rightButton"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/upButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="0"
            android:background="@drawable/button_bg_rounded_corners"
            android:text="@string/upButton"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/leftButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:background="@drawable/button_bg_rounded_corners"
            android:text="@string/leftButton"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/downButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="2"
            android:background="@drawable/button_bg_rounded_corners"
            android:text="@string/downButton"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/attackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_row="1"
            android:background="@drawable/button_bg_rounded_corners"
            android:text="@string/attackButton"
            android:textColor="@color/colorAccent" />

    </GridLayout>

    <GridLayout
        android:id="@+id/joystickLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/controllerLayout"
        android:layout_marginBottom="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="100dp"
        android:layout_toRightOf="@+id/controllerLayout"
        android:background="@color/colorPrimary"
        android:columnCount="1"
        android:padding="0dp"
        android:paddingBottom="0dp"
        android:paddingEnd="0dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:paddingStart="0dp"
        android:paddingTop="0dp"
        android:rotation="0"
        android:rowCount="1"
        android:visibility="invisible">

        <suto.zoran.firsttry.JoyStick
            android:id="@+id/joystick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/connectionLayout"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:columnCount="0"
            android:padding="100dp"
            android:paddingBottom="100dp"
            android:paddingEnd="100dp"
            android:paddingLeft="100dp"
            android:paddingRight="100dp"
            android:paddingStart="100dp"
            android:paddingTop="100dp"
            android:rowCount="0"
            android:visibility="visible" />
    </GridLayout>

    <Button
        android:id="@+id/exitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/joystickLayout"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/joystickLayout"
        android:layout_column="2"
        android:layout_row="1"
        android:background="@drawable/button_bg_rounded_corners"
        android:onClick="exitClientButton"
        android:text="@string/exitButton"
        android:textColor="@color/colorAccent"
        android:visibility="invisible" />


</RelativeLayout>
